--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,3 +3,21 @@ a { cursor: pointer; }
 .app-container {
     min-height: 350px;
 }
+
+.form-control {
+    font: inherit;
+    color: currentColor;
+    width: 100%;
+    border: 0;
+    height: 1.1876em;
+    margin: 0;
+    display: block;
+    padding: 6px 0 7px;
+    min-width: 0;
+    background: none;
+    box-sizing: content-box;
+    animation-name: mui-auto-fill-cancel;
+    letter-spacing: inherit;
+    animation-duration: 10ms;
+    -webkit-tap-highlight-color: transparent;
+  }
